[package]
name = "os_display"
version = "0.1.3"
authors = ["Jan Verbeek <jan.verbeek@posteo.nl>"]
description = "Display strings in a safe platform-appropriate way"
keywords = ["shell", "cli", "terminal", "text", "no_std"]
categories = ["command-line-interface", "text-processing"]
repository = "https://github.com/blyxxyz/os_display"
documentation = "https://docs.rs/os_display"
license = "MIT"
readme = "README.md"
edition = "2018"
exclude = ["fuzz", ".gitignore", ".github", "scripts"]

[dependencies]
unicode-width = "0.1.9"

[features]
default = ["native", "alloc", "std"]

# Enable quoting for OsStr and in the style of the current platform
native = []

# Enable bash/ksh-style quoting
unix = []

# Enable PowerShell-style quoting
windows = []

# Use the relevant parts of the standard library
alloc = []
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
